<resources>
    <string name="app_name">Library</string>
    <string name="library">Library</string>
    <string name="lib_login">+79991234567</string>
    <string name="lib_password">Password</string>
    <string name="lib_send_button">Login</string>
    <string name="lib_restore_password">Forgot your password? Restore it!</string>
    <string name="lib_wrong_data">Invalid username or password</string>
    <string name="lib_register_now">Don\'t you have an account? Register now!</string>
    <string name="lib_register_text">Registration</string>
    <string name="lib_re_password">Confirm password</string>
    <string name="lib_full_name">Full name</string>
    <string name="lib_unknown_result">Unknown error</string>
    <string name="lib_already_login">Do you already have an account? Log in</string>
    <string name="lib_empty_fields">Sorry, but all fields must be filled in!</string>
    <string name="lib_wrong_passwords">Passwords must match!</string>
    <string name="lib_wrong_phone_number">Your phone doesn\'t match the template!</string>
    <string name="success_registration">The user has been successfully created</string>
    <string name="account_has_been">The user has already been created</string>
    <string name="Example_books">Название книги</string>
    <string name="Example_author">Автор книги</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="Example_description">ECMAScript 6 represents the biggest update to the core of JavaScript in the history of the language. In Understanding ECMAScript 6, expert developer Nicholas C. Zakas provides a complete guide to the object types, syntax, and other exciting changes that ECMAScript 6 brings to JavaScript.</string>
</resources>